# shipgit

./: README.md  pyproject.toml
shipgit/: permissions.shipgit  shipgit.py
shipit/: shipit.py
