[project]
name = "shipgit" 
version = "0.0.6"
authors = [
  { name="Travis Somerville", email="travis.somerville@gmail.com" },
]
description = "simplest command line menu driven deployment tool.  using git, tags, and branches to deploy"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/tsomerville2/shipgit" # Replace if your project is elsewhere
Issues = "https://github.com/tsomerville2/shipgit/issues" # Replace if you use a different issue tracker

[project.scripts]
shipgit = "shipgit.shipgit:main_menu"

[build-system]
requires = ["hatchling"]  
build-backend = "hatchling.build" 

[tool.hatch.build.targets.wheel]
include = ["shipgit"]

